[package]
name = "keygenx"
version = "0.1.0"
edition = "2021"
description = "KeyGen - simple customizable and convenient Key Generator. (in development)"

authors = ["Alexander <qmvscorpio@gmail.com>"]
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"